--- a/src/app/Admin/admin/feedbacks/feedbacks.component.html
+++ b/src/app/Admin/admin/feedbacks/feedbacks.component.html
@@ -210,7 +210,7 @@
             <div class="modal-footer">
                 <!-- Nút Gửi Email qua Gmail -->
                 <a [href]="getGmailLink()" class="btn btn-primary" target="_blank">
-                    <i class="bi bi-envelope"></i>Gửi Email
+                    <i class="bi bi-envelope" style="margin: 0px 8px;"></i>Gửi Email
                 </a>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
             </div>
