--- a/src/app/Auth/login/login.component.html
+++ b/src/app/Auth/login/login.component.html
@@ -59,9 +59,9 @@
       </div>
 
       <!-- Link đăng ký -->
-      <div class="register-link">
+      <!-- <div class="register-link">
         Bạn chưa có tài khoản? <a href="auth/register">Đăng ký ngay</a>
-      </div>
+      </div> -->
     </form>
   </div>
 </div>
