--- a/src/app/Admin/Admin_Layouts/layouts.component.html
+++ b/src/app/Admin/Admin_Layouts/layouts.component.html
@@ -1,7 +1,5 @@
-<!----------------------------------------------------------------------------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -368,7 +366,7 @@
                         aria-label="Search">
                     <button type="submit"><i class="bi bi-search"></i></button>
                 </div>
-
+                
                 <!-- Navbar -->
                 <div class="navbar navbar-expand-lg ms-auto">
                     <div class="container">
@@ -384,17 +382,18 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end"
                                     aria-labelledby="userDropdown">
+                                    <p style="padding: 0px 20px; font-size: 15px; font-weight: 120;">Welcome {{ username }}!</p>
                                     <li><a class="dropdown-item"
-                                            routerLink="/admin/app-accounts-info">Thông
+                                            routerLink="/admin/app-accounts-info"><i class="bi bi-person-circle" style="padding: 0px 7px;"></i>Thông
                                             tin cá nhân</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="#">Trang
+                                    <li><a class="dropdown-item" href="#"><i class="bi bi-house-heart" style="padding: 0px 7px;"></i>Trang
                                             Home (User)</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
                                     <li><a class="dropdown-item"
-                                            (click)="logout()">Đăng
+                                            (click)="logout()"><i class="bi bi-box-arrow-right" style="padding: 0px 7px;"></i>Đăng
                                             xuất</a></li>
                                 </ul>
                             </li>
